--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-hyperdev-app",
+	"name": "fcc-afamo-issutracker",
 	"version": "0.0.1",
 	"description": "What am I about?",
 	"main": "server.js",
@@ -12,6 +12,7 @@
 		"body-parser": "^1.15.2",
 		"chai": "^3.5.0",
 		"mongodb": "^2.2.16",
+		"mongoose": "^4.7.2",
 		"chai-http": "^3.0.0",
 		"mocha": "^3.2.0",
 		"zombie": "^5.0.5",
